# CompressionVAE

./: .gitignore  LICENSE.txt  README.md  benchmark_cvae.py  benchmark_data.py  setup.cfg  setup.py  test_mnist.py  test_mnist_tf2.py  test_tf.py
benchmark_results/: benchmark_results.csv
cvae/: cvae.py  cvae_tf2.py
cvae/lib/: data_reader.py  data_reader_array.py  data_reader_bridge.py  data_reader_tf2.py  functions.py  model_iaf.py  model_iaf_tf2.py
