[metadata]
name = cvae
author = Max Frenzel
author_email = maxfrenzel+cvae@gmail.com
description = CompressionVAE: General purpose dimensionality reduction and manifold learning tool based on Variational Autoencoder.
keywords =
    vae
    variational
    autoencoder
    manifold
    dimensionality
    reduction
    compression
    tensorflow
url = https://github.com/maxfrenzel/CompressionVAE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    joblib
    tqdm
    tensorflow>=1,<2
python_requires = >=3.6

[bdist_wheel]
universal = 0

